fix: page heading spacing, links alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -152,3 +152,15 @@ a {
     background-color: rgba(255, 255, 255, 0.75);
   }
 }
+
+.sff-page {
+
+  h1 + p {
+    text-align: center;
+  }
+
+  p + h2,
+  p + h3 {
+    margin-top: 3rem;
+  }
+}
